force-app/main/default/objects/Touch_Level_Criteria__c/Touch_Level_Criteria__c.object-meta.xml
<CustomObject>
    <description>Parent configuration record defining which touch level applies for a given Opportunity Stage and set of field conditions. Evaluated by TouchLevelEvaluatorAction @InvocableMethod.</description>
    <label>Touch Level Criteria</label>
    <nameField>
        <label>Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Touch Level Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>