force-app/main/default/objects/Touch_Level_Criteria__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active criteria are evaluated at runtime.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>