force-app/main/default/objects/Touch_Level_Criteria__c/fields/Logic_Expression__c.field-meta.xml
<CustomField>
    <fullName>Logic_Expression__c</fullName>
    <description>Boolean expression combining condition numbers. e.g. &quot;1 AND 2 AND 3&quot; or &quot;1 OR (2 AND 3)&quot;. If blank, all conditions must pass (AND logic).</description>
    <label>Logic Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>