force-app/main/default/objects/Touch_Level_Criteria__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Admin description of this criteria set. For documentation purposes only.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>