force-app/main/default/objects/Touch_Level_Criteria__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Evaluation order within the same Stage. Lower number = evaluated first. First matching criteria wins.</description>
    <label>Priority</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>