force-app/main/default/objects/Touch_Level_Criteria__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Opportunity StageName value this criteria applies to. Must exactly match the StageName picklist API value.</description>
    <label>Opportunity Stage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>