force-app/main/default/objects/Touch_Level_Criteria__c/fields/Touch_Level_Result__c.field-meta.xml
<CustomField>
    <fullName>Touch_Level_Result__c</fullName>
    <description>The touch level returned when all conditions on this criteria are satisfied.</description>
    <label>Touch Level Result</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Touch</fullName>
            </value>
            <value>
                <fullName>Medium Touch</fullName>
            </value>
            <value>
                <fullName>Low Touch</fullName>
            </value>
            <value>
                <fullName>No Touch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>