force-app/main/default/objects/Touch_Level_Criteria__c/listViews/Active_Criteria.listView-meta.xml
<ListView>
    <fullName>Active_Criteria</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Touch_Level_Result__c</columns>
    <columns>Priority__c</columns>
    <columns>Logic_Expression__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Criteria</label>
</ListView>