force-app/main/default/objects/Touch_Level_Criteria__c/listViews/All_Criteria.listView-meta.xml
<ListView>
    <fullName>All_Criteria</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Touch_Level_Result__c</columns>
    <columns>Priority__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Criteria</label>
</ListView>